--- a/mypage.html
+++ b/mypage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./tittlesection/tittlesection.css">
 </head>
 <body>
     <div id = 'title'>
@@ -13,22 +14,9 @@
     </div>
 </body>
 <style>
-    body {
+     body {
         background-image: url("https://images.stockcake.com/public/8/8/9/889c1161-ac90-403a-b63f-23d708e67520_large/sunset-mountain-landscape-stockcake.jpg");
         background-size: cover;
-    }
-    h1 {
-        color: blue;
-    }
-    button:hover {
-        background-color: red;
-        cursor: pointer;
-        font-size: 20px;
-    }
-    #title{
-        text-align: center;
-        width: 100%;
-        margin-top: 50px;
     }
 </style>
 <script>
