--- a/mypage.html
+++ b/mypage.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./tittlesection/tittlesection.css">
 </head>
 <body>
-    <div id = 'title'>
+    <div class="main-section" id = 'title'>
         <h1>Welcome to Godslove Website</h1>
         <p>This is where dreams come true</p>
         <button onclick="makeDreamComeTrue()">Make my dream come true</button>
@@ -17,6 +17,11 @@
      body {
         background-image: url("https://images.stockcake.com/public/8/8/9/889c1161-ac90-403a-b63f-23d708e67520_large/sunset-mountain-landscape-stockcake.jpg");
         background-size: cover;
+    }
+    .main-section{
+        width: 100vw;
+        height: 100vh;
+        border: 2px solid white;
     }
 </style>
 <script>
