--- a/mypage.html
+++ b/mypage.html
@@ -14,6 +14,10 @@
     </div>
 </body>
 <style>
+    html, body{
+        margin: 0px;
+        padding: 0px;
+    }
      body {
         background-image: url("https://images.stockcake.com/public/8/8/9/889c1161-ac90-403a-b63f-23d708e67520_large/sunset-mountain-landscape-stockcake.jpg");
         background-size: cover;
