Set all elements to border-box sizing

--- a/mypage.html
+++ b/mypage.html
@@ -14,6 +14,9 @@
     </div>
 </body>
 <style>
+    * {
+        box-sizing: border-box;
+    }
     html, body{
         margin: 0px;
         padding: 0px;
