added font-family Saira

--- a/mypage.html
+++ b/mypage.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./tittlesection/tittlesection.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100..900;1,100..900&display=swap" >
 </head>
 <body>
     <div class="main-section" id = 'title'>
@@ -16,6 +17,7 @@
 <style>
     * {
         box-sizing: border-box;
+        font-family: 'Saira';
     }
     html, body{
         margin: 0px;
