--- a/mypage.html
+++ b/mypage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Simvo</title>
     <link rel="stylesheet" href="./tittlesection/tittlesection.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100..900;1,100..900&display=swap" >
 </head>
@@ -11,7 +11,7 @@
     <div class="main-section" id = 'title'>
         <h1>Welcome to Godslove Website</h1>
         <p>This is where dreams come true</p>
-        <button onclick="makeDreamComeTrue()">Make my dream come true</button>
+        <button class="tittlesectionButton" onclick="makeDreamComeTrue()">Make my dream come true</button>
     </div>
 </body>
 <style>
