Advanced Whitespaces management

--- a/mypage.html
+++ b/mypage.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class="main-section" id = 'title'>
-        <h1>Welcome to Godslove Website</h1>
-        <p>This is where dreams come true</p>
-        <button class="tittlesectionButton" onclick="makeDreamComeTrue()">Make my dream come true</button>
+        <h1 class="title-section-header">Godslove Uwumwonse</h1>
+        <p class="title-section-subtitle">Changing the world one clock at a time</p>
+        <button class="tittlesectionButton" onclick="makeDreamComeTrue()">Click me</button>
     </div>
 </body>
 <style>
