added css media for smaller screens

--- a/mypage.html
+++ b/mypage.html
@@ -48,6 +48,11 @@
         width: 65%;
         margin: 0 auto;
     }
+    @media screen and (max-width: 500px) {
+        .title-block-container{
+            width: 100%;
+        }
+    }
 </style>
 <script>
     function makeDreamComeTrue (){
