added icons to aboutme section

--- a/mypage.html
+++ b/mypage.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./tittlesection/tittlesection.css">
     <link rel="stylesheet" href="./aboutmesection/aboutmesection.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100..900;1,100..900&display=swap" >
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 </head>
 <body>
     <div class="main-section" id = 'title'>
@@ -23,7 +24,12 @@
                 Also a new age content creator, check out my channel on 'curious with gee'
             </p>
         </div>
-        
+        <div class="aboutme-icons">
+            <i class="aboutme-icon fa-brands fa-linkedin"></i>
+            <i class="aboutme-icon fa-brands fa-twitter"></i>
+            <i class="aboutme-icon fa-solid fa-envelope"></i>
+            <i class="aboutme-icon fa-brands fa-youtube"></i>
+        </div>
     </div>
 </body>
 <style>
@@ -41,7 +47,7 @@
     }
     .misc-section{
         width: 100vw;
-        padding: 100px 25px;
+        padding: 120px 25px;
         text-align: center;
     }
     .title-block-container{
