Added links to icons and CV

--- a/mypage.html
+++ b/mypage.html
@@ -25,10 +25,21 @@
             </p>
         </div>
         <div class="aboutme-icons">
-            <i class="aboutme-icon fa-brands fa-linkedin"></i>
-            <i class="aboutme-icon fa-brands fa-twitter"></i>
-            <i class="aboutme-icon fa-solid fa-envelope"></i>
-            <i class="aboutme-icon fa-brands fa-youtube"></i>
+            <a href="https://www.linkedin.com/in/godslove-uwumwonse-4098bb238?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BT3Ka0Mi1TDOKQLBH49xDvg%3D%3D" target="_blank">
+                <i class="aboutme-icon fa-brands fa-linkedin"></i>
+            </a>
+            <a href="https://x.com/09godslove" target="_blank">
+                <i class="aboutme-icon fa-brands fa-twitter"></i>
+            </a>
+            <a href="https://www.youtube.com/@curiouswithG" target="_blank">
+               <i class="aboutme-icon fa-brands fa-youtube"></i>
+            </a>            
+            <a href="https://mail.google.com/mail/?view=cm&to=godsloveaiyowie@gmail.com" target="_blank">
+                <i class="aboutme-icon fa-solid fa-envelope"></i>
+            </a>
+        </div>
+        <div class="aboutme-CV">
+            <a href="aboutmesection/Godslove Uwumwonse CV.pdf" download>Download my CV</a>
         </div>
     </div>
 </body>
