Created craps game space

--- a/mypage.html
+++ b/mypage.html
@@ -6,6 +6,7 @@
     <title>Simvo</title>
     <link rel="stylesheet" href="./tittlesection/tittlesection.css">
     <link rel="stylesheet" href="./aboutmesection/aboutmesection.css">
+    <link rel="stylesheet" href="./crapsgame/crapsgame.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100..900;1,100..900&display=swap" >
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 </head>
@@ -41,6 +42,13 @@
         <div class="aboutme-CV">
             <a href="aboutmesection/Godslove Uwumwonse CV.pdf" download>Download my CV</a>
         </div>
+    </div>
+    <div class="main-section" id="craps-game">
+        <h1 class="craps-game-title">Casino craps game</h1>
+        <div class="craps-table">
+            
+        </div>
+
     </div>
 </body>
 <style>
