added username section

--- a/mypage.html
+++ b/mypage.html
@@ -46,7 +46,18 @@
     <div class="main-section" id="craps-game">
         <h1 class="craps-game-title">Casino craps game</h1>
         <div class="craps-table">
-            
+            <div class="craps-game-username-input">
+                <div>
+                    Enter your username to begin:
+                </div>
+                <div>
+                    <input type="text" class="username-input" id="username-input">
+                </div>
+                <div onclick="registerCrapsPlayer()" class="continue-to-game">
+                    Continue
+                </div>
+                
+            </div>
         </div>
 
     </div>
@@ -84,6 +95,9 @@
         document.body.style.background = 'url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSMx65LMESxVxsAWYDkP9Q8oItSArTz7VyTuQ&s)'
         document.getElementById('title').style.visibility = 'hidden'
         document.getElementById('aboutMe').style.visibility = 'hidden'
+    }
+    function registerCrapsPlayer (){
+        let username = getElementById('username-input').value
     }
 </script>
 </html>
