Added stats section

--- a/mypage.html
+++ b/mypage.html
@@ -59,7 +59,17 @@
                 
             </div>
             <div id="crapsgame-main-section">
-                MAIN SECTION
+                <div id="crapsgame-main-section-stats">
+                    <div>
+                        Welcome, <span id = 'craps-user'></span>
+                    </div>
+                    <div id="crapsgame-main-section-money-stats">
+                        $ <span id="craps-money"></span>
+                    </div>
+                    <div>
+                        Rounds: <span id="craps-rounds"></span>
+                    </div>
+                </div>
             </div>
         </div>
 
