Made Craps game title and table responsive

--- a/mypage.html
+++ b/mypage.html
@@ -44,7 +44,7 @@
         </div>
     </div>
     <div class="main-section" id="craps-game">
-        <h1 class="craps-game-title">Casino craps game</h1>
+        <div class="craps-game-title">Casino craps game</div>
         <div class="craps-table">
             <div class="craps-game-username-input" id="craps-game-username-input">
                 <div>
