--- a/mypage.html
+++ b/mypage.html
@@ -70,6 +70,9 @@
                         Rounds: <span id="craps-rounds"></span>
                     </div>
                 </div>
+                <div class="craps-rounds-manager">
+                    ROUND Manager
+                </div>
             </div>
         </div>
 
