--- a/mypage.html
+++ b/mypage.html
@@ -71,7 +71,12 @@
                     </div>
                 </div>
                 <div class="craps-rounds-manager">
-                    ROUND Manager
+                    <div id="EVEN" onclick="betEven()">
+                        EVEN
+                    </div>
+                    <div id ='ODD' onclick="betOdd()">
+                        ODD
+                    </div>
                 </div>
             </div>
         </div>
