--- a/mypage.html
+++ b/mypage.html
@@ -77,6 +77,11 @@
                     <div id ='ODD' onclick="betOdd()">
                         ODD
                     </div>
+                    <div>
+                        <span onclick="reduceBet()">-</span>
+                        <span id="craps-user-bet-amount"></span>
+                        <span onclick="increaseBet()">+</span>
+                    </div>
                 </div>
             </div>
         </div>
