--- a/mypage.html
+++ b/mypage.html
@@ -72,7 +72,8 @@
                     </div>
                 </div>
                 <div class="craps-table-contianer no-select">
-                    <div class="craps-roll-dice-container"> Roll Dice<i class="fa-solid fa-dice"></i></div>
+                    <div id= 'crapsDiceRollButton'class="craps-roll-dice-container" onclick="rollDice()"> Roll Dice<i class="fa-solid fa-dice"></i></div>
+                    <div id="craps-dice-animation-contanier"></div>
                 </div>
                 <div class="craps-rounds-manager no-select">
                     <div class="bets-grid">
@@ -124,6 +125,7 @@
     }
 </style>
 <script src="./crapsgame/crapsgame.js"></script>
+<script type="text/javascript" src="https://unpkg.com/roll-a-die@2.0.1/dist/roll-a-die.js"></script>
 <script>
     function makeDreamComeTrue (){
         document.body.style.background = 'url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSMx65LMESxVxsAWYDkP9Q8oItSArTz7VyTuQ&s)'
