--- a/mypage.html
+++ b/mypage.html
@@ -96,7 +96,7 @@
                 <div id="crpas-round-finished-grid-container">
                     <div class="craps-rounds-finished-manager no-select">
                         <div class="bets-grid">
-                            <div class="craps-finshed-picker" >
+                            <div class="craps-finshed-picker" onclick="DisplayNextRound()" >
                                 NEXT ROUND
                             </div>
                             <div class="rounds-finished-message" id ='round-finshed-message'>
