--- a/mypage.html
+++ b/mypage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simvo</title>
+    <title>09CrapsGame</title>
     <link rel="stylesheet" href="./tittlesection/tittlesection.css">
     <link rel="stylesheet" href="./aboutmesection/aboutmesection.css">
     <link rel="stylesheet" href="./crapsgame/crapsgame.css">
