--- a/mypage.html
+++ b/mypage.html
@@ -55,7 +55,7 @@
                     <input type="text" class="username-input" id="username-input">
                 </div>
                 <div onclick="registerCrapsPlayer()" class="continue-to-game">
-                    Continue
+                    Continue?
                 </div>
                 
             </div>
