--- a/mypage.html
+++ b/mypage.html
@@ -117,7 +117,7 @@
         </div>
 
     </div>
-     <div class="main-section" id="random-quote-generator">
+    <div class="main-section" id="random-quote-generator">
         
         <div>
             <div id="random-quote-title">RANDOM QUOTE GENERATOR</div>
@@ -125,7 +125,16 @@
             <div id="random-quote-author"></div>
             <div onclick="getQuote()" id="new-quote">New Quote </div>
         </div>
-     </div>
+    </div>
+    <div class="main-section" id="stock-analysis-dashboard">
+        <div>
+            <div id="stock-analysis-dashboard-title">stock Analysis Dashboard</div>
+            <div id="stock-analysis-dashboard-title">Enter the symbol of the stock you wish to analyze. E.g MSFT.</div>
+            <input type="text" class="stock-anaysis-input" id="stock-analysis-input">
+            <button class="stock-analysis-btn" onclick="analyzeStock()">Analyze</button>
+            <div id="stock-analysis-dashboard-data"></div>
+        </div>
+    </div>
 </body>
 <style>
     * {
@@ -156,6 +165,7 @@
     }
 </style>
 <script src="./crapsgame/crapsgame.js"></script>
+<script src="./stockAnalysisDashboard/stockAnalysisDashboard.js"></script>
 <script type="text/javascript" src="https://unpkg.com/roll-a-die@2.0.1/dist/roll-a-die.js"></script>
 <script src="./randomQuoteGenerator/randomQuoteGenerator.js"></script>
 <script>
