--- a/personal-website/index.html
+++ b/personal-website/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>09CrapsGame</title>
-    <link rel="stylesheet" href="./tittlesection/tittlesection.css">
-    <link rel="stylesheet" href="./aboutmesection/aboutmesection.css">
-    <link rel="stylesheet" href="./crapsgame/crapsgame.css">
-    <link rel="stylesheet" href="./crapsgame/utilitis.css">
-    <link rel="stylesheet" href="./randomQuoteGenerator/randomQuoteGenerator.css">
+    <link rel="stylesheet" href="./src/tittlesection/tittlesection.css">
+    <link rel="stylesheet" href="./src/aboutmesection/aboutmesection.css">
+    <link rel="stylesheet" href="./src/crapsgame/crapsgame.css">
+    <link rel="stylesheet" href="./src/crapsgame/utilitis.css">
+    <link rel="stylesheet" href="./src/randomQuoteGenerator/randomQuoteGenerator.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100..900;1,100..900&display=swap" >
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 </head>
@@ -164,10 +164,10 @@
         }
     }
 </style>
-<script src="./crapsgame/crapsgame.js"></script>
-<script src="./stockAnalysisDashboard/stockAnalysisDashboard.js"></script>
+<script src="./src/crapsgame/crapsgame.js"></script>
+<script src="./src/stockAnalysisDashboard/stockAnalysisDashboard.js"></script>
 <script type="text/javascript" src="https://unpkg.com/roll-a-die@2.0.1/dist/roll-a-die.js"></script>
-<script src="./randomQuoteGenerator/randomQuoteGenerator.js"></script>
+<script src="./src/randomQuoteGenerator/randomQuoteGenerator.js"></script>
 <script>
     function makeDreamComeTrue (){
         document.body.style.background = 'url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSMx65LMESxVxsAWYDkP9Q8oItSArTz7VyTuQ&s)'
@@ -176,3 +176,5 @@
     }
 </script>
 </html>
+    <!-- <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script> -->
