Added styled components to align grid

--- a/personal-website/index.html
+++ b/personal-website/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./src/randomQuoteGenerator/randomQuoteGenerator.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100..900;1,100..900&display=swap" >
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
+    <!-- <link rel="stylesheet" href="./src/stockAnalysisDashboard/stockAnalysisDashboard.css"> -->
 </head>
 <body onload="getQuote()">
     <div class="main-section" id = 'title'>
